# SeekEngine

./: .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  seek.config.h.in  shader_content_def.h
engine/: CMakeLists.txt  fake.cpp  seek_engine.h
engine/components/: animation_component.cpp  animation_component.h  animation_impl.cpp  animation_impl.h  camera_component.cpp  camera_component.h  component.h  entity.cpp  entity.h  image_component.cpp  image_component.h  light_component.cpp  light_component.h  liquid_glass_component.cpp  liquid_glass_component.h  mesh_component.cpp  mesh_component.h  metaball_component.cpp  metaball_component.h  particle_component.cpp  particle_component.h  scene_component.cpp  scene_component.h  shape_mesh_component.cpp  shape_mesh_component.h  skeletal_mesh_component.cpp  skeletal_mesh_component.h  skybox_component.cpp  skybox_component.h  spring_skeleton_component.cpp  spring_skeleton_component.h  sprite2d_component.cpp  sprite2d_component.h  triangle_mesh_component.cpp  triangle_mesh_component.h  watermark_component.cpp  watermark_component.h
engine/d3d11_rhi/: d3d11_adapter.cpp  d3d11_adapter.h  d3d11_framebuffer.cpp  d3d11_framebuffer.h  d3d11_mesh.cpp  d3d11_mesh.h  d3d11_predeclare.h  d3d11_program.cpp  d3d11_program.h  d3d11_query.cpp  d3d11_query.h  d3d11_render_buffer.cpp  d3d11_render_buffer.h  d3d11_render_state.cpp  d3d11_render_state.h  d3d11_render_view.cpp  d3d11_render_view.h  d3d11_rhi_context.cpp  d3d11_rhi_context.h  d3d11_rhi_context_factory.cpp  d3d11_shader.cpp  d3d11_shader.h  d3d11_shader_param_assign_helper.cpp  d3d11_shader_param_assign_helper.h  d3d11_texture.cpp  d3d11_texture.h  d3d11_translate.cpp  d3d11_translate.h  d3d11_window.cpp  d3d11_window.h
engine/effect/: blur.cpp  blur.h  command_buffer.cpp  command_buffer.h  deferred_shading_renderer.cpp  deferred_shading_renderer.h  draw_call.h  effect.cpp  effect.h  encoder.cpp  encoder.h  entity.cpp  entity.h  forward_shading_renderer.cpp  forward_shading_renderer.h  frame.cpp  frame.h  gi.cpp  gi.h  hdr_postprocess.cpp  hdr_postprocess.h  ibl.cpp  ibl.h  ldr_postprocess.cpp  ldr_postprocess.h  parameter.cpp  parameter.h  postprocess.cpp  postprocess.h  scene_renderer.cpp  scene_renderer.h  shadow_layer.cpp  shadow_layer.h  sprite2d_renderer.cpp  sprite2d_renderer.h  taa.cpp  taa.h  technique.cpp  technique.h  variable.h  (+2 more)
engine/importer/: gltf2.h  gltf2_loader.cpp  gltf2_loader.h  gltf_data.h  gltf_data_builder.cpp  gltf_data_builder.h  gltf_scene_assembler.cpp  gltf_scene_assembler.h  loader.h
engine/kernel/: context.cpp  context.h  kernel.h
engine/math/: aabbox.cpp  aabbox.h  box.h  color.cpp  color.h  frustum.cpp  frustum.h  hash.h  math_utility.cpp  math_utility.h  matrix.cpp  matrix.h  plane.cpp  plane.h  quad_mesh_process.cpp  quad_mesh_process.h  quaternion.cpp  quaternion.h  ray.cpp  ray.h  rect.h  spring_mass_damper.cpp  spring_mass_damper.h  transform.cpp  transform.h  vector.h
engine/physics/: metaball_water_simulator.cpp  metaball_water_simulator.h  spring_mass_damper.cpp  spring_mass_damper.h
engine/resource/: resource_mgr.cpp  resource_mgr.h
engine/rhi/: format.cpp  format.h  framebuffer.cpp  framebuffer.h  material.h  mesh.cpp  mesh.h  program.cpp  program.h  query.h  render_buffer.h  render_definition.h  render_state.cpp  render_state.h  render_view.h  rhi.h  rhi_command.h  rhi_context.cpp  rhi_context.h  shader.cpp  shader_param_assign_helper.h  texture.h
engine/rhi/base/: format.cpp  format.h  framebuffer.cpp  framebuffer.h  material.h  mesh.cpp  mesh.h  program.cpp  program.h  query.h  render_buffer.h  render_definition.h  render_state.cpp  render_state.h  render_view.h  rhi_command.cpp  rhi_context.cpp  rhi_context.h  rhi_definition.h  rhi_fence.h  rhi_framebuffer.cpp  rhi_framebuffer.h  rhi_gpu_buffer.h  rhi_mesh.cpp  rhi_mesh.h  rhi_object.h  rhi_program.cpp  rhi_program.h  rhi_query.h  rhi_render_buffer.h  rhi_render_state.cpp  rhi_render_state.h  rhi_render_view.h  rhi_shader.cpp  rhi_texture.h  shader.cpp  shader.h  texture.h  viewport.h
engine/rhi/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_context_factory.cpp  d3d11_fence.cpp  d3d11_fence.h  d3d11_framebuffer.cpp  d3d11_framebuffer.h  d3d11_gpu_buffer.cpp  d3d11_gpu_buffer.h  d3d11_mesh.cpp  d3d11_mesh.h  d3d11_predeclare.h  (+23 more)
engine/scene_manager/: octree_scene_manager.cpp  octree_scene_manager.h  scene_manager.cpp  scene_manager.h
engine/thread/: mutex.cpp  mutex.h  semaphore.cpp  semaphore.h  thread.cpp  thread.h  thread_manager.cpp  thread_manager.h
engine/utils/: buffer.cpp  buffer.h  compression.cpp  compression.h  dll_loader.cpp  dll_loader.h  error.cpp  error.h  exposure.cpp  exposure.h  file.h  file_uid.h  image_decode.cpp  image_decode.h  log.cpp  log.h  safe_c.cpp  safe_c.h  seek_defs.h  shape_mesh.cpp  shape_mesh.h  timer.cpp  timer.h  util.cpp  util.h  zbase64.cpp  zbase64.h
engine/vulkan_rhi/: vulkan_rhi.cpp  vulkan_rhi.h
samples/: CMakeLists.txt
samples/01.Tutorial/: 01.Tutorial.cpp  01.Tutorial.h
samples/02.Particles/: 02.Particles.cpp  02.Particles.h  fire_3x3.json  fire_4x4.json  nine_birds_3x3.json  particle_3x3_reflect.json  particle_no_tex.json  particle_pos_over_time.json  particle_pos_over_time_tex.json  wave_5x4.json
samples/03.MeshLoader/: 03.MeshLoader.cpp  03.MeshLoader.h
samples/03.SDF_Metaball/: 03.SDF_Metaball.cpp
samples/04.Lighting/: 04.Lighting.cpp  04.Lighting.h
samples/05.DeferredShading/: 05.DeferredShading.cpp  05.DeferredShading.h
samples/06.GlobalIllumination/: 06.GlobalIllumination.cpp  06.GlobalIllumination.h
samples/07.LiquidGlass/: 07.LiquidGlass.cpp  07.LiquidGlass.h
samples/08.MetballWater/: 08.MetballWater.cpp  08.MetballWater.h
samples/common/: app_framework.cpp  app_framework.h  app_imgui.cpp  app_imgui.h  first_person_camera_controller.cpp  first_person_camera_controller.h  mouse_hook.cpp  mouse_hook.h
tools/: CMakeLists.txt  replace_tab2space.py
tools/03.Generate_FileID/: 03.Generate_FileID.py
tools/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  conan_deps.cmake  shader_helper.h
(+366 files in other folders)
